styles.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

a {
    text-decoration: none;
    color: white;
}

:root.dark {
    --background-main-color: rgb(39, 39, 39);
    --font-main-color: rgb(207, 207, 207);

    --background-title-bottom-color: black;

    --border-card: 1px dotted rgb(202, 202, 202);
}

:root.light {
    --background-main-color: rgb(248, 248, 248);
    --font-main-color: rgb(39, 39, 39);

    --background-title-bottom-color: grey;
    --font-title-bottom-color: black;

    --border-card: 1px dotted black;
}

.Main.Content {
    display: flex;
    flex-direction: column;
    align-items: center;
    position: relative;
    width: 100vw;
    height: 225vh;
    background: var(--background-main-color);
    color: var(--font-main-color);
    font-family: 'Roboto', sans-serif;
}

.Main.Content .Main.Title {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 200px;
    font-size: 2rem;
    background: var(--background-title-bottom-color);
    color: var(--font-title-bottom-color);
    font-family: 'Long Cang', cursive;

}

.Main.Content .Main.Title #light-toggle {
    position: relative;
    left: 600px;
    width: 60px;
    height: 100%;
    font-size: 30px;
    background: transparent;
    border: none;
    color: var(--font-title-bottom-color);
    cursor: pointer;
}

.Main.Content .Text.Culinary.Story {
    display: grid;
    width: 90%;
    grid-template-columns: repeat(2, 50%);
    grid-template-rows: 200px 200px 220px 150px;
    gap: 10px;
    grid-template-areas: 
    "Paragraph-one Paragraph-one" 
    "Paragraph-two Image-container"
    "Paragraph-three Image-container"
    "Paragraph-four Paragraph-four";
}

.Main.Content .Text.Culinary.Story .Paragraph.One {
    grid-area: Paragraph-one;
    display: grid;
    align-items: center;
    text-align: center;
    font-size: 1.3rem;
    text-align: center;
    margin-top: 60px;
}

.Main.Content  .Text.Culinary.Story .Paragraph.Two {
    grid-area: Paragraph-two;
    display: grid;
    align-items: center;
    padding: 10px;
    font-size: 1.2rem;
}

.Main.Content .Text.Culinary.Story .Paragraph.Three {
    grid-area: Paragraph-three;
    display: grid;
    align-items: center;
    padding: 10px;
    font-size: 1.2rem;
}

.Main.Content .Text.Culinary.Story .Paragraph.Four {
    grid-area: Paragraph-four;
    display: grid;
    align-items: center;
    margin-top: 50px;
    text-align: center;
    font-size: 1rem;
    border: 2px dotted white;
    border-radius: 20px;
}

.Main.Content .Text.Culinary.Story .Image.Container {
    grid-area: Image-container;
    overflow: hidden;
}

.Main.Content .Text.Culinary.Story .Image.Container img {
    width: 100%;
    height: 100%;
}

.Main.Content .Text.Culinary.Plates {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: 50px;
    width: 100%;
    height: 400px;
}

.Main.Content .Text.Culinary.Plates .Second.Title {
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 1.2rem;
    height: 120px;
}

.Main.Content .Text.Culinary.Plates .Paragraph.Five {
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 1.2rem;
    width: 1300px 
}

.Main.Content .Text.Culinary.Plates .Paragraph.Six {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100px;
    padding: 20px;
    margin: 25px;
    font-size: 1.2rem;
    border: 2px dotted white;
    border-radius: 25px;
}

.Main.Content .Plates.Container {
    display: grid; 
    align-content: center;
    justify-content: center;
    width: 100%;
    gap: 50px;
    grid-template-columns: repeat(5, 310px);
    grid-template-rows: 500px;
}

.Main.Content .Plate {
    border: var(--border-card);
    border-radius: 25px;
}

.Main.Content .Plate .Plate.Image {
    height: 70%;
    border-radius: 25px 25px 0px 0px;
    overflow: hidden;
}

.Main.Content .Plate .Plate.Image img {
    width: 100%;
    height: 100%;
}

.Main.Content .Plate .Plate.Title {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 20%;
    font-size: 1.7rem;
    font-style: italic;
    border-radius: 0px 0px 0px 0px;

}

.Main.Content .Plate .Plate.Description {
    align-items: center;
    justify-content: center;
    display: flex;
    height: 10%;
    font-size: 0.9rem;
    opacity: 65%;
    border-radius: 0px 0px 25px 25px;
}

.Main.Content .Bottom.Content {
    display: flex;
    align-items: center;
    justify-content: center;
    position: absolute;
    bottom: 0px;
    width: 100%;
    height: 45px;
    background: var(--background-title-bottom-color);
    color: var(--font-title-bottom-color)
}

.Main.Content .Bottom.Content img{
    display: flex;
    align-self: center;
    width: 45px;
    height: 45px;
    padding: 5px;
}

